[fix]: z-index header and slider

--- a/css/header.sass
+++ b/css/header.sass
@@ -3,7 +3,7 @@ header
 	width: 100%
 	height: 90px
 	margin: 0
-	z-index: 1
+	z-index: 2
 	background-color: $primary-color-gray
 	.header-container
 		width: 90%
