--- a/css/slider.sass
+++ b/css/slider.sass
@@ -36,7 +36,7 @@
 		bottom: 1em
 		margin: 0px
 		width: 100%
-		z-index: 5
+		z-index: 1
 		li
 			list-style-type: none
 			background-color: #444
