--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ html body header {
   width: 100%;
   height: 90px;
   margin: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: #3a3a3a;
 }
 html body header .header-container {
@@ -236,7 +236,7 @@ html body .slider-controls {
   bottom: 1em;
   margin: 0px;
   width: 100%;
-  z-index: 5;
+  z-index: 1;
 }
 html body .slider-controls li {
   list-style-type: none;
